@@ -1,6 +1,7 @@
 Ascii.pm
 Changes
 examples/ex1.pl
+examples/ex2.pl
 inc/Module/Install.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
