@@ -1,4 +1,5 @@
 0.02
+ - Add EXAMPLE2 section to doc.
 
 0.01 2014-08-23T15:00:01+02:00
  - First version.
